<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/timerr">

    <!-- Input fields for minutes and seconds -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <!-- Minutes Input -->
        <EditText
            android:id="@+id/minutesInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />

        <!-- Seconds Input -->
        <EditText
            android:id="@+id/secondsInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:inputType="number"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textAlignment="center" />
    </LinearLayout>

    <!-- Circular Progress Timer (Simulating Timer) -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress_drawable"
        android:layout_gravity="center" />

    <!-- Timer Text -->
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <!-- Button for controlling timer -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/timerbtn"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/white"
            android:backgroundTint="@color/backBtn" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/coloo"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="120dp"
        app:srcCompat="@drawable/alarmm" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="69dp"
        android:layout_height="42dp"
        android:layout_marginTop="-47dp"
        android:layout_marginLeft="50dp"
        app:srcCompat="@drawable/oip_removebg_preview__1_" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="63dp"
        android:layout_height="43dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginTop="-45dp"
        app:srcCompat="@drawable/download_removebg_preview" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="77dp"
        android:layout_height="56dp"
        android:layout_marginLeft="-110dp"
        android:layout_marginTop="-47dp"
        app:srcCompat="@drawable/oip__1__removebg_preview" />
</LinearLayout>
